<resources>
    <string name="app_name">BrisaMar</string>
    <string name="fragment_home_title">Inicio</string>
    <string name="btn_home_pedido">Hacer Pedido</string>
    <string name="fragment_register_title">Registro</string>
    <string name="menu_help_title">Ayuda</string>
    <string name="menu_about_title">Acerca de…</string>
    <string name="fragment_help_title">Ayuda</string>
    <string name="fragment_about_title">Acerca de…</string>
    <string name="fragment_help_text">
        <![CDATA[
        <p style="margin-bottom: 5px">Lorem ipsum dolor sit amet consectetur adipiscing elit conubia per, nascetur eu tempus nullam integer velit senectus lobortis. Dapibus curabitur vestibulum turpis dis in sapien quam dignissim, aenean montes netus iaculis ornare eu duis egestas, arcu posuere urna ante viverra interdum magna. Eu in morbi fusce sed fringilla hac duis imperdiet felis, sapien torquent ornare mattis class enim platea dapibus ante, parturient ullamcorper nec laoreet varius ad habitasse eros. Justo massa natoque volutpat a auctor vitae pellentesque luctus inceptos non, porta fermentum pretium convallis nunc blandit leo turpis pharetra, ullamcorper orci proin varius arcu lectus morbi senectus vel.</p> <p style="margin-bottom: 5px">Viverra ante leo urna enim torquent aliquet dui metus aptent, est sodales mauris sociis mi facilisi feugiat ad, eleifend massa aliquam curae gravida himenaeos primis faucibus. Mauris conubia eu eleifend nisi dui placerat fames pharetra congue montes nulla, tempus gravida vel at facilisi id mattis condimentum tortor dictum velit curae, leo etiam aliquet sollicitudin interdum nec morbi sed dictumst magna. Rutrum neque sagittis sem ante parturient suspendisse scelerisque commodo, dapibus himenaeos sollicitudin pellentesque aptent velit integer sociosqu, ornare eget lectus molestie interdum penatibus tincidunt.</p> <p style="margin-bottom: 5px">Lacus habitant natoque dis ullamcorper velit auctor mollis leo morbi id orci laoreet curabitur imperdiet sociosqu aptent turpis, nam sollicitudin tempor aenean cras lobortis non eleifend luctus rhoncus dapibus neque felis feugiat euismod. Felis viverra vitae nulla lectus est leo cum egestas per euismod, vivamus ante pulvinar cursus nostra varius dis purus facilisis id, facilisi tellus curae arcu ultrices aenean cubilia luctus habitant. Porta bibendum commodo orci cum senectus velit suscipit augue condimentum, vestibulum eleifend id euismod lacus dictum ante tristique metus, dictumst massa sagittis conubia faucibus suspendisse interdum maecenas. Class penatibus ut hac senectus dis curabitur integer, ultrices himenaeos volutpat velit mus suscipit aliquam quam, pretium inceptos enim duis tincidunt ornare.</p> <p style="margin-bottom: 5px">Semper ad lectus himenaeos tincidunt luctus bibendum consequat dignissim ultrices quis gravida, donec est nisl fringilla varius convallis justo id sagittis ante. Cum tincidunt nunc vitae libero habitasse mi non montes sociis, faucibus nisl metus mus quisque eleifend pharetra pulvinar imperdiet vel, egestas lacinia malesuada conubia mollis turpis accumsan placerat. Tempor proin leo mi placerat elementum senectus curae, per nisl feugiat ridiculus quis aliquet lectus, fames laoreet metus massa fringilla litora.</p> <p style="margin-bottom: 5px">Eu justo vivamus per donec sem sed volutpat, eros suscipit parturient ultricies dui platea, ridiculus felis ad imperdiet tortor mollis. Non neque aptent nibh erat placerat consequat fames vivamus viverra arcu commodo, facilisis congue mollis litora ullamcorper ornare praesent sociosqu pellentesque at venenatis molestie, habitasse pharetra urna tempor fringilla convallis purus aenean in odio. Imperdiet proin ornare semper porta dapibus morbi tempor phasellus nullam auctor sollicitudin vulputate, augue hac sociis nisl justo commodo integer etiam egestas per.</p> <p style="margin-bottom: 5px">Inceptos ad parturient porta fames bibendum nam orci pellentesque potenti, velit leo quam taciti molestie litora sem nascetur. Hac feugiat praesent turpis ante tincidunt ligula ad maecenas mi accumsan, auctor nulla lacinia ultrices per tempor facilisi quisque euismod, nunc libero netus molestie proin cras id sed aptent. Venenatis consequat mollis convallis vulputate nec nullam viverra pharetra nunc morbi, nostra id ligula mus interdum massa fames orci fringilla, libero habitant ut posuere rhoncus ultrices penatibus facilisis sodales.</p> <p style="margin-bottom: 5px">Pellentesque accumsan nulla class lacinia parturient commodo magnis scelerisque iaculis dapibus laoreet purus, nisi posuere mollis malesuada tempor varius aliquet luctus cras cubilia imperdiet dignissim ullamcorper, morbi vestibulum gravida netus phasellus praesent nam penatibus augue aliquam libero. Diam turpis curae facilisis pretium vel dictum metus ornare vulputate inceptos tristique malesuada, fringilla commodo vitae dui quisque magnis primis suspendisse sapien pharetra cubilia, mauris at platea hac conubia phasellus curabitur pulvinar risus sollicitudin odio. Commodo sodales conubia scelerisque eget cum platea volutpat odio accumsan, taciti purus ad auctor donec dui vivamus per rutrum aenean, justo leo convallis rhoncus urna egestas vulputate lectus. Laoreet magnis nam phasellus et quis inceptos dictum potenti, pretium risus felis massa luctus est diam non imperdiet, pulvinar libero mus rhoncus elementum praesent blandit.</p> <p style="margin-bottom: 5px">Dignissim iaculis curae malesuada ultrices pretium fringilla, quis risus mus montes tempor feugiat faucibus, viverra turpis nostra etiam ligula. Penatibus primis ligula metus conubia dapibus nisi placerat hac elementum, inceptos scelerisque hendrerit cubilia nisl blandit donec interdum, maecenas purus pellentesque condimentum litora sociosqu nibh lacus. Ligula ridiculus sapien molestie imperdiet scelerisque accumsan integer nostra, posuere mus dictumst ut convallis primis aliquet cras, massa risus congue malesuada erat curae pulvinar.</p> <p style="margin-bottom: 5px">Pretium est cubilia hendrerit nascetur bibendum parturient urna libero dignissim, lectus mauris felis facilisi ultricies sociis duis fringilla, feugiat interdum faucibus in a cras vestibulum dictumst. Pellentesque faucibus commodo mattis tristique ac rhoncus habitasse purus risus fringilla ultrices, cubilia donec phasellus diam senectus conubia a mi parturient et sodales pulvinar, mollis nibh sed accumsan feugiat netus varius curae eu etiam. Massa vel metus fermentum imperdiet dis in phasellus dapibus aptent, posuere hendrerit magnis consequat hac litora rhoncus netus, duis turpis nullam tristique ultrices ultricies fringilla pretium.</p> <p style="margin-bottom: 5px">Dis laoreet commodo sodales ornare eros velit taciti, lectus fringilla scelerisque curabitur vitae odio, per donec praesent ultrices diam neque. Molestie fringilla nec hac non hendrerit accumsan ligula cursus, diam nunc congue urna dignissim id taciti commodo quisque, condimentum ultrices per purus lacinia dictumst litora. A penatibus per molestie senectus suscipit purus congue at fusce fermentum accumsan, lectus pretium diam facilisis morbi mattis mus et nulla litora aliquam, cursus platea libero taciti tortor habitasse placerat erat non hendrerit.</p>
        ]]>
    </string>
    <string name="fragment_about_author_label">Autor:</string>
    <string name="fragment_about_author_text">José Ángel González Molina</string>
    <string name="fragment_about_version_label">Versión:</string>
    <string name="fragment_about_version_text">0.0.0</string>
    <string name="fragment_about_copyright">2023 ©</string>
    <string name="fragment_about_social_id">\@champunes</string>
    <string name="fragment_about_social_url">https://bsky.app/profile/champunes.bsky.social</string>
    <string name="fragment_home_iv_content">Logo de BurgerMar</string>
    <string name="fragment_register_name_hint">Nombre</string>
    <string name="fragment_register_tlf_hint">Teléfono</string>
    <string name="fragment_register_collection_hint">Recogida</string>
    <string-array name="opciones_recogida">
        <item>A domicilio</item>
        <item>Establecimiento</item>
    </string-array>
    <string name="fragment_register_address_hint">Domicilio</string>
    <string name="btn_clear_text">Limpiar</string>
    <string name="btn_next_text">Siguiente</string>

</resources>
