<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_graph"
            app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment"
              android:name="com.iesaguadulce.pmdmtarea2.HomeFragment"
              android:label="@string/fragment_home_title"
              tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_homeFragment_to_registerFragment"
                app:destination="@id/registerFragment"/>
    </fragment>

    <fragment android:id="@+id/registerFragment"
              android:name="com.iesaguadulce.pmdmtarea2.RegisterFragment"
              android:label="@string/fragment_register_title"
              tools:layout="@layout/fragment_register">
        <action android:id="@+id/action_registerFragment_to_burgerFragment"
                app:destination="@id/burgerFragment"/>
    </fragment>

    <fragment android:id="@+id/helpFragment"
              android:name="com.iesaguadulce.pmdmtarea2.HelpFragment"
              android:label="@string/fragment_help_title"
              tools:layout="@layout/fragment_help"/>

    <fragment android:id="@+id/aboutFragment"
              android:name="com.iesaguadulce.pmdmtarea2.AboutFragment"
              android:label="@string/fragment_about_title"
              tools:layout="@layout/fragment_about"/>
    <fragment android:id="@+id/burgerFragment"
              android:name="com.iesaguadulce.pmdmtarea2.BurgerFragment"
              android:label="@string/fragment_burger_title"
              tools:layout="@layout/fragment_burger">
        <argument android:name="pedido"
                  app:argType="com.iesaguadulce.pmdmtarea2.Order"/>
    </fragment>
</navigation>
