<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <TextView android:id="@+id/tv_app"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_name"
                  android:textAppearance="?attr/textAppearanceHeadline2"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@id/tv_author_label"
                  app:layout_constraintVertical_chainStyle="spread"/>

        <TextView android:id="@+id/tv_author_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fragment_about_author_label"
                  android:textAppearance="?attr/textAppearanceHeadline6"
                  android:textStyle="bold"
                  android:layout_marginEnd="10dp"
                  app:layout_constraintTop_toBottomOf="@id/tv_app"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toLeftOf="@id/tv_author_text"
                  app:layout_constraintBottom_toTopOf="@id/tv_version_label"
                  app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView android:id="@+id/tv_author_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fragment_about_author_text"
                  android:textAppearance="?attr/textAppearanceHeadline6"
                  app:layout_constraintTop_toBottomOf="@id/tv_app"
                  app:layout_constraintLeft_toRightOf="@id/tv_author_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@id/tv_version_text"/>

        <TextView android:id="@+id/tv_version_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fragment_about_version_label"
                  android:textAppearance="?attr/textAppearanceHeadline6"
                  android:textStyle="bold"
                  android:layout_marginEnd="10dp"
                  app:layout_constraintTop_toBottomOf="@id/tv_author_label"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toLeftOf="@id/tv_version_text"
                  app:layout_constraintBottom_toTopOf="@id/ch_social"
                  app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView android:id="@+id/tv_version_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fragment_about_version_text"
                  android:textAppearance="?attr/textAppearanceHeadline6"
                  app:layout_constraintTop_toBottomOf="@id/tv_author_text"
                  app:layout_constraintLeft_toRightOf="@id/tv_version_label"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toTopOf="@id/ch_social"/>

        <com.google.android.material.chip.Chip android:id="@+id/ch_social"
                                               android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               android:text="@string/fragment_about_social_id"
                                               android:textAppearance="?attr/textAppearanceHeadline6"
                                               app:chipIcon="@drawable/social_icon"
                                               app:ensureMinTouchTargetSize="true"
                                               app:layout_constraintTop_toBottomOf="@id/tv_version_label"
                                               app:layout_constraintLeft_toLeftOf="parent"
                                               app:layout_constraintRight_toRightOf="parent"
                                               app:layout_constraintBottom_toTopOf="@id/tv_copyright"/>

        <TextView android:id="@+id/tv_copyright"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fragment_about_copyright"
                  android:textAppearance="?attr/textAppearanceHeadline5"
                  app:layout_constraintTop_toBottomOf="@id/ch_social"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
