<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline android:id="@+id/top_border"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    app:layout_constraintGuide_percent=".05"
                                                    android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline android:id="@+id/left_border"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    app:layout_constraintGuide_percent=".15"
                                                    android:orientation="vertical"/>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tf_name"
                                                               android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               android:hint="@string/fragment_register_name_hint"
                                                               app:endIconMode="clear_text"
                                                               app:layout_constraintTop_toTopOf="@id/top_border"
                                                               app:layout_constraintLeft_toLeftOf="@id/left_border"
                                                               app:layout_constraintRight_toRightOf="@id/right_border"
                                                               app:layout_constraintBottom_toTopOf="@id/tf_tlf"
                                                               app:layout_constraintVertical_chainStyle="spread_inside">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tf_tlf"
                                                               android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               android:hint="@string/fragment_register_tlf_hint"
                                                               app:endIconMode="clear_text"
                                                               app:layout_constraintTop_toBottomOf="@+id/tf_name"
                                                               app:layout_constraintLeft_toLeftOf="@id/left_border"
                                                               app:layout_constraintRight_toRightOf="@id/right_border"
                                                               app:layout_constraintBottom_toTopOf="@id/tf_collection">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tf_collection"
                                                               android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               android:hint="@string/fragment_register_collection_hint"
                                                               style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                                               app:layout_constraintTop_toBottomOf="@+id/tf_tlf"
                                                               app:layout_constraintLeft_toLeftOf="@id/left_border"
                                                               app:layout_constraintRight_toRightOf="@id/right_border"
                                                               app:layout_constraintBottom_toTopOf="@id/tf_address">

            <AutoCompleteTextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:inputType="none"
                                  android:hint="@string/fragment_register_collection_hint"
                                  app:simpleItems="@array/opciones_recogida"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tf_address"
                                                               android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               android:hint="@string/fragment_register_address_hint"
                                                               app:endIconMode="clear_text"
                                                               app:layout_constraintTop_toBottomOf="@+id/tf_collection"
                                                               app:layout_constraintLeft_toLeftOf="@id/left_border"
                                                               app:layout_constraintRight_toRightOf="@id/right_border"
                                                               app:layout_constraintBottom_toTopOf="@+id/btn_register_clear">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:inputType="textPostalAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:id="@+id/btn_register_clear"
                                                           android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:text="@string/btn_clear_text"
                                                           android:textAppearance="?attr/textAppearanceTitleMedium"
                                                           app:icon="@drawable/baseline_clear_all_24"
                                                           app:iconGravity="end"
                                                           app:iconPadding="5dp"
                                                           app:layout_constraintTop_toBottomOf="@id/tf_address"
                                                           app:layout_constraintLeft_toLeftOf="parent"
                                                           app:layout_constraintRight_toRightOf="parent"
                                                           app:layout_constraintBottom_toTopOf="@+id/btn_register_next"
                                                           style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>

        <com.google.android.material.button.MaterialButton android:id="@+id/btn_register_next"
                                                           android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:text="@string/btn_next_text"
                                                           android:textAppearance="?attr/textAppearanceTitleMedium"
                                                           app:layout_constraintTop_toBottomOf="@id/btn_register_clear"
                                                           app:layout_constraintLeft_toLeftOf="parent"
                                                           app:layout_constraintRight_toRightOf="parent"
                                                           app:layout_constraintBottom_toBottomOf="@id/bottom_border"/>

        <androidx.constraintlayout.widget.Guideline android:id="@+id/right_border"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    app:layout_constraintGuide_percent=".85"
                                                    android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline android:id="@+id/bottom_border"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    app:layout_constraintGuide_percent=".85"
                                                    android:orientation="horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
